# veloscope-generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  docker-build.yml
shared/: __init__.py  config.py
shared/utils/: __init__.py  control_file_utils.py  logging_utils.py  openai_utils.py  s3_utils.py
terraform/: README.md
terraform/environments/dev/: backend.hcl  cloudwatch.tf  ecs.tf  main.tf  monitoring.tf  parameters.tf  scheduling.tf  variables.tf
terraform/environments/prod/: backend.hcl  cloudwatch.tf  ecs.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  parameters.tf  scheduling.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  variables.tf
terraform/modules/scheduling/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  output.tf  variables.tf
terraform/shared/: backend.hcl  main.tf  output.tf  variables.tf
tests/: conftest.py  test_get_zodiac_sign.py
